<resources>
    <string name="app_name">GitClientApp</string>
    <string name="search">Search</string>
    <string name="input_username">Input github username</string>
    <string name="user_score">Score: %d</string>
    <string name="no_result_found">We don\'t have this account name. \nPlease try another one!</string>
    <string name="error_message">We got some problem. \nPlease try again!</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="id">Id: %s</string>
    <string name="user_information">User Information</string>
</resources>
